fixed no scroll on mobile

--- a/src/scss/_gameEvents.scss
+++ b/src/scss/_gameEvents.scss
@@ -3,6 +3,7 @@
 .container-events {
     height: 100vh;
     margin: 20px;
+    padding-top: 20px;
     padding-bottom: 100px;
     width: 30%;
     overflow-y: scroll;
