--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -14,4 +14,5 @@
 .container-split {
     display: flex;
     justify-content: space-between;
+    height: 100%;
 }
